# square-roots-starter

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml  gatorgrader.yml
squareroot/: pyproject.toml
squareroot/squareroot/: main.py
squareroot/tests/: test_squareroot.py
writing/: reflection.md
