[tool.poetry]
name = "squareroot"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.scripts]
squareroot = "squareroot.main:cli"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.9.0"
pyinstrument = "^4.0.3"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]
taskipy = "^1.8.1"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
pylint = "^2.10.2"
mypy = "^0.910"
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.10.0"
pymarkdownlnt = "^0.9.8"

[tool.taskipy.tasks]
black = { cmd = "black squareroot tests --check", help = "Run the black checks for source code format" }
fiximports = { cmd = "isort squareroot tests", help = "Run isort to fix source code imports" }
fixformat = { cmd = "black squareroot tests", help = "Run the black checks for source code format" }
isort = { cmd = "isort -c squareroot tests", help = "Run the isort checks for source code" }
flake8 = { cmd = "flake8 squareroot tests", help = "Run the flake8 checks for source code documentation" }
markdownlint = { cmd = "poetry run pymarkdown --config .pymarkdown.cfg scan ../writing/reflection.md ../README.md", help = "Run the markdown linter on writing" }
mypy = { cmd = "poetry run mypy squareroot", help = "Run the mypy type checker for potential type errors" }
pydocstyle = { cmd = "pydocstyle squareroot tests", help = "Run the pydocstyle checks for source code documentation" }
pylint = { cmd = "pylint squareroot tests", help = "Run the pylint checks for source code documentation" }
test = { cmd = "pytest -x -s", help = "Run the pytest test suite" }
test-silent = { cmd = "pytest -x --show-capture=no", help = "Run the pytest test suite without showing output" }
all = "task black && task isort && task flake8 && task markdownlint && task mypy && task pydocstyle && task pylint && task test"
lint = "task black && task isort && task flake8 && task markdownlint && task mypy && task pydocstyle && task pylint"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
